unpackaged/main/default/objects/Alerte__c/Alerte__c.object-meta.xml
<CustomObject>
    <label>Alerte</label>
    <nameField>
        <displayFormat>Alerte-{0000}</displayFormat>
        <label>N° Alerte</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerte</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>