unpackaged/main/default/objects/Alerte__c/fields/Adresse_Localisation__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Localisation__c</fullName>
    <label>Adresse Localisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>