unpackaged/main/default/objects/Alerte__c/fields/Agence_propietaire__c.field-meta.xml
<CustomField>
    <fullName>Agence_propietaire__c</fullName>
    <formula>Parc__r.Agence__r.Name</formula>
    <label>Agence propiétaire</label>
    <type>Text</type>
</CustomField>