unpackaged/main/default/objects/Alerte__c/fields/Alerte_traitee__c.field-meta.xml
<CustomField>
    <fullName>Alerte_traitee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerte traitée</label>
    <type>Checkbox</type>
</CustomField>