unpackaged/main/default/objects/Alerte__c/fields/Charge_alternateur__c.field-meta.xml
<CustomField>
    <fullName>Charge_alternateur__c</fullName>
    <label>Charge alternateur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>