unpackaged/main/default/objects/Alerte__c/fields/Charge_Alternateur_Update__c.field-meta.xml
<CustomField>
    <fullName>Charge_Alternateur_Update__c</fullName>
    <label>Charge_Alternateur Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>