unpackaged/main/default/objects/Alerte__c/fields/Code_Alarme__c.field-meta.xml
<CustomField>
    <fullName>Code_Alarme__c</fullName>
    <label>Code Alarme</label>
    <length>50</length>
    <type>Text</type>
</CustomField>