unpackaged/main/default/objects/Alerte__c/fields/Code_defaut_alternateur__c.field-meta.xml
<CustomField>
    <fullName>Code_defaut_alternateur__c</fullName>
    <label>Code Defaut Alternateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>