unpackaged/main/default/objects/Alerte__c/fields/Commentaires_CAT__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_CAT__c</fullName>
    <label>Commentaires	 CAT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>