unpackaged/main/default/objects/Alerte__c/fields/Date_de_dernier_etat_moteur__c.field-meta.xml
<CustomField>
    <fullName>Date_de_dernier_etat_moteur__c</fullName>
    <label>Date de dernier état moteur</label>
    <type>DateTime</type>
</CustomField>