unpackaged/main/default/objects/Alerte__c/fields/Date_Dernier_Etat_Moteur__c.field-meta.xml
<CustomField>
    <fullName>Date_Dernier_Etat_Moteur__c</fullName>
    <label>Le</label>
    <type>DateTime</type>
</CustomField>