unpackaged/main/default/objects/Alerte__c/fields/Date_Dernier_Etat_Moteur_Update__c.field-meta.xml
<CustomField>
    <fullName>Date_Dernier_Etat_Moteur_Update__c</fullName>
    <label>Le Update</label>
    <type>DateTime</type>
</CustomField>