unpackaged/main/default/objects/Alerte__c/fields/Date_Heure_de_Creation__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_de_Creation__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date / Heure de création</label>
    <type>DateTime</type>
</CustomField>