unpackaged/main/default/objects/Alerte__c/fields/DateTime_Alerte__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Alerte__c</fullName>
    <label>DateTime Alerte</label>
    <type>DateTime</type>
</CustomField>