unpackaged/main/default/objects/Alerte__c/fields/Dernier_Etat_Moteur__c.field-meta.xml
<CustomField>
    <fullName>Dernier_Etat_Moteur__c</fullName>
    <label>Moteur</label>
    <length>50</length>
    <type>Text</type>
</CustomField>