unpackaged/main/default/objects/Alerte__c/fields/Dernier_Etat_Moteur_Update__c.field-meta.xml
<CustomField>
    <fullName>Dernier_Etat_Moteur_Update__c</fullName>
    <label>Moteur Update</label>
    <length>50</length>
    <type>Text</type>
</CustomField>