unpackaged/main/default/objects/Alerte__c/fields/Description_Update__c.field-meta.xml
<CustomField>
    <fullName>Description_Update__c</fullName>
    <label>Description Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>