unpackaged/main/default/objects/Alerte__c/fields/Equipement__c.field-meta.xml
<CustomField>
    <fullName>Equipement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipement</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le parc doit être de type Equipement</errorMessage>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Equipement</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Alerte (Equipement)</relationshipLabel>
    <relationshipName>Alerte_Equipement</relationshipName>
    <type>Lookup</type>
</CustomField>