unpackaged/main/default/objects/Alerte__c/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <formula>if
(TEXT(Priorite__c) = &#39;Inutile&#39; ,IMAGE(&quot;/resource/1629820056000/Icon_Flag_Black?&quot;, &quot;&quot;,32, 32),
IF(TEXT(Priorite__c)= &#39;Basse&#39;,IMAGE(&quot;/resource/1623751189000/Icon_Flag_Green?&quot;, &quot;&quot;,32, 32),
IF(TEXT(Priorite__c)= &#39;Moyenne&#39;,IMAGE(&quot;/resource/1623751255000/Icon_Flag_Yellow?&quot;, &quot;&quot;,32, 32),
IF(TEXT(Priorite__c)= &#39;Critique&#39;,IMAGE(&quot;/resource/1623751238000/Icon_Flag_Red?&quot;, &quot;&quot;,32, 32), IMAGE(&quot;/resource/1623751222000/Icon_Flag_Null?&quot;, &quot;&quot;,32, 32)
))))</formula>
    <label>Etat</label>
    <type>Text</type>
</CustomField>