unpackaged/main/default/objects/Alerte__c/fields/Heure_de_creation__c.field-meta.xml
<CustomField>
    <fullName>Heure_de_creation__c</fullName>
    <label>Heure de creation</label>
    <type>Time</type>
</CustomField>