unpackaged/main/default/objects/Alerte__c/fields/Localisation_latitude__c.field-meta.xml
<CustomField>
    <fullName>Localisation_latitude__c</fullName>
    <label>Localisation (latitude)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>