unpackaged/main/default/objects/Alerte__c/fields/Localisation_longitude__c.field-meta.xml
<CustomField>
    <fullName>Localisation_longitude__c</fullName>
    <label>Localisation (longitude)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>