unpackaged/main/default/objects/Alerte__c/fields/Location_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Latitude__c</fullName>
    <label>Location Latitude</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>