unpackaged/main/default/objects/Alerte__c/fields/Location_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Location_Longitude__c</fullName>
    <label>Location Longitude</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>