unpackaged/main/default/objects/Alerte__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF( ISPICKVAL( Type_Alerte__c , &#39;Tension batterie basse&#39;) , RecordType.Name +&quot; - &quot;+ Parc__r.Name +&quot; - &quot;+ text(Niveau_batterie_actuel__c)+&quot; Volt&quot;,
RecordType.Name +&quot; - &quot;+ Parc__r.Name
)</formula>
    <label>Nom alerte</label>
    <type>Text</type>
</CustomField>