unpackaged/main/default/objects/Alerte__c/fields/Nb_Demarrages_12H__c.field-meta.xml
<CustomField>
    <fullName>Nb_Demarrages_12H__c</fullName>
    <label>Nb Demarrages 12H</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>