unpackaged/main/default/objects/Alerte__c/fields/Nb_Demarrages_12H_Update__c.field-meta.xml
<CustomField>
    <fullName>Nb_Demarrages_12H_Update__c</fullName>
    <label>Nb Démarrages 12H Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>