unpackaged/main/default/objects/Alerte__c/fields/Niveau_batterie_actuel__c.field-meta.xml
<CustomField>
    <fullName>Niveau_batterie_actuel__c</fullName>
    <label>Niveau batterie actuel</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>