unpackaged/main/default/objects/Alerte__c/fields/Niveau_Batterie_Actuel_Update__c.field-meta.xml
<CustomField>
    <fullName>Niveau_Batterie_Actuel_Update__c</fullName>
    <label>Niveau Batterie Actuel Update</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>