unpackaged/main/default/objects/Alerte__c/fields/Nom_Commercial_Client__c.field-meta.xml
<CustomField>
    <fullName>Nom_Commercial_Client__c</fullName>
    <formula>Parc__r.Nom_Commercial_Client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom Commercial Client</label>
    <type>Text</type>
</CustomField>