unpackaged/main/default/objects/Alerte__c/fields/Nom_Commercial_Client_LookUp__c.field-meta.xml
<CustomField>
    <fullName>Nom_Commercial_Client_LookUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom Commercial Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alerte</relationshipLabel>
    <relationshipName>Alerte</relationshipName>
    <type>Lookup</type>
</CustomField>