unpackaged/main/default/objects/Alerte__c/fields/Nombre_de_d_marrages_en_12H__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_d_marrages_en_12H__c</fullName>
    <label>Nombre de démarrages en 12H</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>