unpackaged/main/default/objects/Alerte__c/fields/Parc__c.field-meta.xml
<CustomField>
    <fullName>Parc__c</fullName>
    <label>Parc</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Alertes</relationshipLabel>
    <relationshipName>Alerte</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>