unpackaged/main/default/objects/Alerte__c/fields/Parc_Id__c.field-meta.xml
<CustomField>
    <fullName>Parc_Id__c</fullName>
    <label>Parc_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>