unpackaged/main/default/objects/Alerte__c/fields/Picto_Alerte__c.field-meta.xml
<CustomField>
    <fullName>Picto_Alerte__c</fullName>
    <formula>if 
(
  RecordType.DeveloperName = &quot;Tension_batterie_basse&quot;,IMAGE(&quot;/resource/1645019219000/Tension_basse_batterie?&quot;, 
  &quot;Tension Basse&quot;,35,35 ),
  IF
  (
     RecordType.DeveloperName = &#39;Coupure_basse_pression&#39;,
     IMAGE(&quot;/resource/1650538594000/Img_Froid?&quot;, &quot;Froid&quot;,35, 35),
     IMAGE(&quot;/resource/1645019303000/Voyant_Moteur?&quot;, &quot;Voyant Moteur&quot;,35,35)
  ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picto Alerte</label>
    <type>Text</type>
</CustomField>