unpackaged/main/default/objects/Alerte__c/fields/Priorite__c.field-meta.xml
<CustomField>
    <fullName>Priorite__c</fullName>
    <label>Priorité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inutile</fullName>
            </value>
            <value>
                <fullName>Basse</fullName>
            </value>
            <value>
                <fullName>Moyenne</fullName>
            </value>
            <value>
                <fullName>Critique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>