unpackaged/main/default/objects/Alerte__c/fields/Priorite_CAT__c.field-meta.xml
<CustomField>
    <fullName>Priorite_CAT__c</fullName>
    <label>Priorité CAT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inutile</fullName>
            </value>
            <value>
                <fullName>Basse</fullName>
            </value>
            <value>
                <fullName>Moyenne</fullName>
            </value>
            <value>
                <fullName>Critique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>