unpackaged/main/default/objects/Alerte__c/fields/Statut_du_vehicule__c.field-meta.xml
<CustomField>
    <fullName>Statut_du_vehicule__c</fullName>
    <label>Statut du vehicule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MOTEUR_NON_TOURNANT</fullName>
                <default>true</default>
                <label>MOTEUR_NON_TOURNANT</label>
            </value>
            <value>
                <fullName>MOTEUR_TOURNANT_VEHICULE_NON_ROULANT</fullName>
            </value>
            <value>
                <fullName>MOTEUR_TOURNANT_VEHICULE_ROULANT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>