unpackaged/main/default/objects/Alerte__c/fields/Sujet__c.field-meta.xml
<CustomField>
    <fullName>Sujet__c</fullName>
    <label>Sujet</label>
    <type>TextArea</type>
</CustomField>