unpackaged/main/default/objects/Alerte__c/fields/Sujet_Update__c.field-meta.xml
<CustomField>
    <fullName>Sujet_Update__c</fullName>
    <label>Sujet Update</label>
    <type>TextArea</type>
</CustomField>