unpackaged/main/default/objects/Alerte__c/fields/TECH_Lien_SF__c.field-meta.xml
<CustomField>
    <fullName>TECH_Lien_SF__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_340, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_340)) &amp; Id</formula>
    <label>TECH_Lien_SF</label>
    <type>Text</type>
</CustomField>