unpackaged/main/default/objects/Alerte__c/fields/TECH_PF_ALERTES_AGENCES__c.field-meta.xml
<CustomField>
    <fullName>TECH_PF_ALERTES_AGENCES__c</fullName>
    <formula>if
(
AND(CONTAINS( $User.Liste_Agences__c , LEFT(( Parc__r.Agence__r.Code__c ), 3) )
,
NOT(ISBLANK((Parc__r.Agence__r.Code__c))) )
,
TRUE
,
FALSE
)</formula>
    <label>TECH_PF_ALERTES_AGENCES</label>
    <type>Checkbox</type>
</CustomField>