unpackaged/main/default/objects/Alerte__c/fields/Temperature_Exterieure__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Exterieure__c</fullName>
    <label>Temperature Exterieure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>