unpackaged/main/default/objects/Alerte__c/fields/Temperature_exterieure_C__c.field-meta.xml
<CustomField>
    <fullName>Temperature_exterieure_C__c</fullName>
    <label>Température extérieure (°C)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>