unpackaged/main/default/objects/Alerte__c/fields/Tension_batterie_2H__c.field-meta.xml
<CustomField>
    <fullName>Tension_batterie_2H__c</fullName>
    <label>Tension batterie 2H</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>