unpackaged/main/default/objects/Alerte__c/fields/Tension_Batterie_2H_Update__c.field-meta.xml
<CustomField>
    <fullName>Tension_Batterie_2H_Update__c</fullName>
    <label>Tension Batterie 2H Update</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>