unpackaged/main/default/objects/Alerte__c/fields/Type_Alerte__c.field-meta.xml
<CustomField>
    <fullName>Type_Alerte__c</fullName>
    <label>Type Alerte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tension batterie basse</fullName>
            </value>
            <value>
                <fullName>Voyant moteur</fullName>
            </value>
            <value>
                <fullName>Coupure basse pression A01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>