unpackaged/main/default/objects/Alerte__c/fields/Type_De_Batterie__c.field-meta.xml
<CustomField>
    <fullName>Type_De_Batterie__c</fullName>
    <label>Type De Batterie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>