unpackaged/main/default/objects/Alerte__c/fields/Vitesse_Du_Vehicule__c.field-meta.xml
<CustomField>
    <fullName>Vitesse_Du_Vehicule__c</fullName>
    <label>Vitesse du véhicule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>