unpackaged/main/default/objects/Alerte__c/fields/Voyant_moteur_allume_depuis__c.field-meta.xml
<CustomField>
    <fullName>Voyant_moteur_allume_depuis__c</fullName>
    <label>Allumé depuis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>