unpackaged/main/default/objects/Alerte__c/fields/Voyant_moteur_allume_depuis_update__c.field-meta.xml
<CustomField>
    <fullName>Voyant_moteur_allume_depuis_update__c</fullName>
    <label>Allumé depuis Update</label>
    <length>100</length>
    <type>Text</type>
</CustomField>