unpackaged/main/default/objects/Alerte__c/fields/Voyant_moteur_description__c.field-meta.xml
<CustomField>
    <fullName>Voyant_moteur_description__c</fullName>
    <label>Description</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>