unpackaged/main/default/objects/Alerte__c/fields/Voyant_moteur_description_Update__c.field-meta.xml
<CustomField>
    <fullName>Voyant_moteur_description_Update__c</fullName>
    <label>Description Update</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>