unpackaged/main/default/objects/Alerte__c/fields/Voyant_moteur_protocole_Update__c.field-meta.xml
<CustomField>
    <fullName>Voyant_moteur_protocole_Update__c</fullName>
    <label>Protocole Update</label>
    <length>50</length>
    <type>Text</type>
</CustomField>