unpackaged/main/default/objects/Alerte__c/fields/Voyant_moteur_sujet__c.field-meta.xml
<CustomField>
    <fullName>Voyant_moteur_sujet__c</fullName>
    <label>Sujet</label>
    <type>TextArea</type>
</CustomField>