unpackaged/main/default/objects/Alerte__c/fields/Voyant_moteur_sujet_update__c.field-meta.xml
<CustomField>
    <fullName>Voyant_moteur_sujet_update__c</fullName>
    <label>Sujet Update</label>
    <type>TextArea</type>
</CustomField>