unpackaged/main/default/objects/Alerte__c/recordTypes/Coupure_basse_pression.recordType-meta.xml
<RecordType>
    <fullName>Coupure_basse_pression</fullName>
    <active>true</active>
    <label>Coupure basse pression</label>
</RecordType>