unpackaged/main/default/objects/Alerte__c/recordTypes/Tension_batterie_basse.recordType-meta.xml
<RecordType>
    <fullName>Tension_batterie_basse</fullName>
    <active>true</active>
    <label>Tension batterie basse</label>
</RecordType>