unpackaged/main/default/objects/Alerte__c/recordTypes/Voyant_moteur.recordType-meta.xml
<RecordType>
    <fullName>Voyant_moteur</fullName>
    <active>true</active>
    <label>Voyant moteur</label>
</RecordType>