unpackaged/main/default/objects/Alerte__c/validationRules/VR_Alert_CreationAdminOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Alert_CreationAdminOnly</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISNEW()
,
 $User.ProfileId &lt;&gt;  $Label.USR_ProfileId_PFAdministrateurSysteme 
)</errorConditionFormula>
    <errorMessage>Vous n&#39;étes pas autorisé à créer des alertes.</errorMessage>
</ValidationRule>