unpackaged/main/default/objects/Alerte__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Etat__c</columns>
    <columns>Picto_Alerte__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Nom_Commercial_Client_LookUp__c</columns>
    <columns>NAME</columns>
    <columns>Parc__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Alerte_traitee__c</columns>
    <columns>Statut__c</columns>
    <columns>Commentaires_CAT__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>TECH_PF_ALERTES_AGENCES__c</columns>
    <columns>Requete__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>